--- a/TestSelenium/TestSelenium/pom.xml
+++ b/TestSelenium/TestSelenium/pom.xml
@@ -18,6 +18,12 @@
             <artifactId>selenium-java</artifactId>
             <version>4.19.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <version>5.5.0</version>
+            <scope>test</scope>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
