--- a/TestSelenium/TestSelenium/pom.xml
+++ b/TestSelenium/TestSelenium/pom.xml
@@ -30,6 +30,12 @@
             <version>4.19.1</version>
             <type>jar</type>
         </dependency>
+<dependency>
+    <groupId>com.googlecode.json-simple</groupId>
+    <artifactId>json-simple</artifactId>
+    <version>1.1.1</version>
+</dependency>
+
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
